chore: Improve code (#442)
* chore: Improve code

* Convert classes to records